Try to fix bug on iPhone 3

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,14 +9,14 @@
   src: url('../../fonts/Proxima Nova Font.ttf');
 }
 
-//:root {
-//  --app-height: 100%;
-//}
+:root {
+  --app-height: 100%;
+}
 
 .header-container {
   background: #0dcaf0;
   height: 100vh;
-  max-height: -webkit-fill-available;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 ::placeholder {
@@ -438,10 +438,10 @@ footer {
 
 @media screen and (max-width: 480px) {
   .faculty-heading {
-    height: calc(64vh - 20px);
+    height: calc(var(--vh, 1vh) * 64 - 20px);
   }
   .photo-accordion {
-    height: 30vh;
+    height: calc(var(--vh, 1vh) * 30);
   }
 }
 
@@ -690,7 +690,7 @@ footer {
   .splide__slide__container div a{
     font-size: 17px;
     line-height: 6vw;
-    height: 25vw;
+    height: 24vw;
     font-weight: bold;
   }
 }
